Fix header spacing on non-contribution articles [PUB-231]

--- a/frontend/scss/pages/_p-issuearticle-show.scss
+++ b/frontend/scss/pages/_p-issuearticle-show.scss
@@ -387,6 +387,10 @@ Styling related specifically to digital publications
 }
 
 .p-digitalpublicationarticle-show:not(.p-t-contributions) {
+  .m-article-header  {
+    display: none;
+  }
+
   .m-article-header .m-article-header__text {
     display: none;
   }
